@@ -2,9 +2,10 @@ package CollectionFramework;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-public class ListVsAsList {
+public class ListFunctions {
 
     public static void main(String[] args) {
 
@@ -24,7 +25,19 @@ public class ListVsAsList {
         list4.add("Mango");
         System.out.println(list4);
 
-        List<Integer> list3 = List.of(1,2,3,4);
-        list3.set(1,33);
+        List<Integer> list5 = new ArrayList<>();
+        list5.add(4);
+        list5.add(1);
+        list5.add(2);
+        list5.add(3);
+        List<Integer> list3 = List.of(4,5,6,7,8);
+        list5.addAll(list3);
+        Collections.sort(list5);
+        System.out.println(list5);
+
+        List<String> words = Arrays.asList("banana","apple","date");
+        words.sort(null);
+        System.out.println(words);
+
     }
 }
